tdf#90372: Make VclScrolledWindow candidate for tabstopping

this fixes a11y issue, where widgets inside VclScrolledWindow weren't 
accessible by keyboard as Tab, Alt-Tab events respectively, never 
reacheed those
Change-Id: Ic73e24f8036b0f6129c3a4f5efb160f9089cb0b8